src/test/deca/context/invalid/test_getXBis.deca
class A {
int x;
int getX() {
return x;
}
int getXBis() {
return getX;
}
}